// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LicenseStatusIcon renders "failed" state correctly 1`] = `
<div
  class="failed report-block-list-icon"
>
  <gl-icon-stub
    class="gl-mb-1"
    data-testid="status-failed-icon"
    name="status-failed"
    size="12"
    variant="current"
  />
</div>
`;

exports[`LicenseStatusIcon renders "neutral" state correctly 1`] = `
<div
  class="neutral report-block-list-icon"
>
  <gl-icon-stub
    class="gl-mb-1"
    data-testid="status-neutral-icon"
    name="status-alert"
    size="12"
    variant="current"
  />
</div>
`;

exports[`LicenseStatusIcon renders "success" state correctly 1`] = `
<div
  class="report-block-list-icon success"
>
  <gl-icon-stub
    class="gl-mb-1"
    data-testid="status-success-icon"
    name="status-success"
    size="12"
    variant="current"
  />
</div>
`;
